results/classifier/118/arm/1460523
arm: 0.831
device: 0.795
ppc: 0.778
mistranslation: 0.745
permissions: 0.732
TCG: 0.686
PID: 0.673
performance: 0.651
vnc: 0.629
graphic: 0.603
socket: 0.602
network: 0.589
architecture: 0.584
register: 0.568
files: 0.564
semantic: 0.555
debug: 0.467
VMM: 0.447
peripherals: 0.334
KVM: 0.318
risc-v: 0.311
i386: 0.308
virtual: 0.299
kernel: 0.293
hypervisor: 0.280
boot: 0.276
x86: 0.268
assembly: 0.242
user-level: 0.198

target-arm/op_helper.c:424: bad assert

/home/dcb/qemu/trunk/qemu/target-arm/op_helper.c: In function ‘helper_access_check_cp_reg’:
/home/dcb/qemu/trunk/qemu/target-arm/op_helper.c:424:52: error: comparison of constant ‘3’ with boolean expression is always false [-Werror=bool-compare]
         assert(!arm_is_secure(env) && !arm_current_el(env) == 3);
                                                    ^

Maybe

 assert(!arm_is_secure(env) && arm_current_el(env)  != 3);

Fixed by commit 3fc827d591679f3e262b9d1f8b34528eabfca8c0

